--- a/style.css
+++ b/style.css
@@ -78,3 +78,38 @@ a:active {
     color: #D35400; 
     text-decoration: underline;
 }
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+footer img {
+    width: 30px;
+    padding: 20px;
+}
+footer a:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+    margin-bottom: 2px;
+}
+
+.zoom-in {
+    animation: zoomIn 1.2s ease-in-out forwards;
+}
+
+.zoom-in-effect.visible {
+    opacity: 1; /* Rendre visible */
+    transform: scale(1); /* Zoomer */
+}
+@keyframes zoomIn {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
