--- a/style.css
+++ b/style.css
@@ -117,8 +117,9 @@ footer p {
     }
 }
 @media (max-width: 768px) {
-    p, ol, ul {
-        font-size: 0.9rem;
+    p, ol, ul, li {
+        font-size: 1rem;
+        width: 80vw;
         text-align: center;
     }
     h1 {
@@ -129,10 +130,7 @@ footer p {
         width: 70%;
         height: auto;
     }
-    ol, ul {
-        padding: 0;
-        margin: 0;
-    }
+    
     img {
         width: 100%;
         height: auto;
@@ -140,7 +138,7 @@ footer p {
 }
 
 @media (max-width: 480px) {
-    p {
+    p, li {
         font-size: 0.8rem;
     }
 }
