--- a/style.css
+++ b/style.css
@@ -116,12 +116,21 @@ footer p {
         opacity: 1;
     }
 }
+/*Responsive*/
 @media (max-width: 768px) {
     p, ol, ul, li {
         font-size: 1rem;
         width: 80vw;
         text-align: center;
     }
+    figcaption {
+        font-size: 0.8rem;
+    }
+    ul {
+        margin: 0;
+        padding: 0;
+    }
+    
     h1 {
         font-size: 1.5rem;
         text-align: center;
@@ -134,6 +143,9 @@ footer p {
     img {
         width: 100%;
         height: auto;
+    }
+    .code {
+        width: 100%;
     }
 }
 
